--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+*{
+  padding:0px;
+  margin:0px;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,6 +11,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+link,a{
+  color:white;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
