--- a/src/Pages/Store/store.css
+++ b/src/Pages/Store/store.css
@@ -7,6 +7,9 @@
     padding: 0px 10px;
     
 }
+svg{
+    cursor: pointer;
+}
 
 .store >section{
     box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 1px, rgba(9, 30, 66, 0.13) 0px 0px 1px 1px;
